--- a/app/views/needs/_form.html.erb
+++ b/app/views/needs/_form.html.erb
@@ -17,11 +17,7 @@
   </div>
   <div class="field">
     <%= f.label :cabin_id %><br>
-    <%= f.number_field :cabin_id %>
-  </div>
-  <div class="field">
-    <%= f.label :user_id %><br>
-    <%= f.number_field :user_id %>
+    <%= f.select :cabin_id, options_from_collection_for_select(@cabins, :id, :name, selected: @need.cabin_id) %>
   </div>
   <div class="actions">
     <%= f.submit %>
