--- a/app/views/visits/index.html.erb
+++ b/app/views/visits/index.html.erb
@@ -3,10 +3,10 @@
 <table>
   <thead>
     <tr>
-      <th>Time</th>
+      <th>Start date</th>
+      <th>End date</th>
       <th>Cabin</th>
       <th>User</th>
-      <th></th>
       <th></th>
       <th></th>
     </tr>
@@ -15,10 +15,10 @@
   <tbody>
     <% @visits.each do |visit| %>
       <tr>
-        <td><%= visit.time %></td>
-        <td><%= visit.cabin_id %></td>
-        <td><%= visit.user_id %></td>
-        <td><%= link_to 'Show', visit %></td>
+        <td><%= visit.start_date %></td>
+        <td><%= visit.end_date %></td>
+        <td><%= visit.cabin_name(visit.cabin_id) %></td>
+        <td><%= visit.user_name(visit.user_id) %></td>
         <td><%= link_to 'Edit', edit_visit_path(visit) %></td>
         <td><%= link_to 'Destroy', visit, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
