--- a/app/views/visits/_form.html.erb
+++ b/app/views/visits/_form.html.erb
@@ -12,17 +12,17 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :time %><br>
-    <%= f.text_field :time %>
+    <%= f.label :start_date %><br>
+    <%= f.date_field :start_date %>
   </div>
-  <div class="field">
-    <%= f.label :cabin_id %><br>
-    <%= f.number_field :cabin_id %>
-  </div>
-  <div class="field">
-    <%= f.label :user_id %><br>
-    <%= f.number_field :user_id %>
-  </div>
+   <div class="field">
+     <%= f.label :end_date %><br>
+     <%= f.date_field :end_date %>
+   </div>
+   <div class="field">
+     <%= f.label :cabin_id %><br>
+     <%= f.select :cabin_id, options_from_collection_for_select(@cabins, :id, :name, selected: @visit.cabin_id) %>
+   </div>
   <div class="actions">
     <%= f.submit %>
   </div>
