--- a/app/views/visits/every.html.erb
+++ b/app/views/visits/every.html.erb
@@ -1,21 +1,20 @@
-<h1>Listing Future visits</h1>
+<h1>Listing all visits</h1>
 
 <table>
   <thead>
-    <tr>
-      <th>Start date</th>
-      <th>End date</th>
-      <th>Cabin</th>
-      <th>User</th>
-      <th></th>
-      <th></th>
-    </tr>
+  <tr>
+    <th>Start date</th>
+    <th>End date</th>
+    <th>Cabin</th>
+    <th>User</th>
+    <th></th>
+    <th></th>
+  </tr>
   </thead>
 
   <tbody>
-    <% @visits.each do |visit| %>
-      <% if visit.start_date >= Date.today %>
-           <tr>
+  <% @visits.each do |visit| %>
+          <tr>
             <td><%= visit.start_date %></td>
             <td><%= visit.end_date %></td>
             <td><%= visit.cabin_name(visit.cabin_id) %></td>
@@ -23,14 +22,10 @@
             <td><%= link_to 'Edit', edit_visit_path(visit) %></td>
             <td><%= link_to 'Destroy', visit, method: :delete, data: { confirm: 'Are you sure?' } %></td>
           </tr>
-        <% end %>
-    <% end %>
+  <% end %>
   </tbody>
 </table>
 
 <br>
 
-<% unless current_user.nil? %>
-    <%= link_to 'All visits', all_visits_path %> <br/>
-    <%= link_to 'New Visit', new_visit_path %>
-<% end %>
+<%= link_to 'Back', visits_path %>
