--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,7 @@
 </head>
 <body>
 <div class="navbar">
-  <%= link_to 'cabins', cabins_path %>
+  <%= link_to 'home', cabins_path %>
   <%= link_to 'needs', needs_path %>
   <%= link_to 'supplies', supplies_path %>
   <%= link_to 'visits', visits_path %>
