--- a/app/views/visits/every.html.erb
+++ b/app/views/visits/every.html.erb
@@ -1,6 +1,6 @@
 <h1>Listing all visits</h1>
 
-<table>
+<table class="table table-condensed">
   <thead>
   <tr>
     <th>Start date</th>
@@ -24,4 +24,4 @@
 
 <br>
 
-<%= link_to 'Back', visits_path %>
+<%= link_to 'Back', visits_path, class:'btn btn-primary' %>
