--- a/app/views/supplies/index.html.erb
+++ b/app/views/supplies/index.html.erb
@@ -1,9 +1,8 @@
-<div id="notice"><%= notice %></div>
 <h1>Listing supplies</h1>
 <p>You can order the list based on cabin, user or the information.<br/>
     Want to search? Ctrl + F</p>
 
-<table>
+<table class="table table-condensed">
   <thead>
     <tr>
       <th><%= link_to 'Cabin', supplies_path(order:"cabin") %></th>
@@ -31,5 +30,5 @@
 
 
 <% unless current_user.nil? %>
-    <%= link_to 'New Supply', new_supply_path %>
+    <%= link_to 'New Supply', new_supply_path, class:'btn btn-primary' %>
 <% end %>
