--- a/app/views/layouts/_navigation_links.html.erb
+++ b/app/views/layouts/_navigation_links.html.erb
@@ -1,6 +1,6 @@
 <%# add navigation links to this file %>
 <li class="<%= 'active' if params[:controller] == 'cabins' %>"><%= link_to 'Home', cabins_path %></li>
-<li class="<%= 'active' if params[:controller] == 'needs' %>"><%= link_to 'Needs', needs_path %></li>
+<li class="<%= 'active' if params[:controller] == 'needs_steps.rb' %>"><%= link_to 'Needs', needs_path %></li>
 <li class="<%= 'active' if params[:controller] == 'supplies' %>"><%= link_to 'Supplies', supplies_path %></li>
 <li class="<%= 'active' if params[:controller] == 'visits' %>"><%= link_to 'Visits', visits_path %></li>
 <% unless current_user.nil? %>
