--- a/app/views/visits/_form.html.erb
+++ b/app/views/visits/_form.html.erb
@@ -12,11 +12,11 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :start_date %><br>
+    <%= f.label :start_date %> (pp.kk.vvvv) <br>
     <%= f.date_field :start_date %>
   </div>
    <div class="field">
-     <%= f.label :end_date %><br>
+     <%= f.label :end_date %> (pp.kk.vvvv) <br>
      <%= f.date_field :end_date %>
    </div>
    <div class="field">
