--- a/app/assets/stylesheets/framework_and_overrides.css.scss
+++ b/app/assets/stylesheets/framework_and_overrides.css.scss
@@ -79,6 +79,11 @@ img {
   background-color: #3D3242;
 }
 
+.col-md-2, .col-md-8 {
+
+  height: 100%;
+}
+
 #footer {
   width: 100%;
   height: 50px;
@@ -92,13 +97,22 @@ img {
 // to make views framework-neutral
 main {
   @extend .container;
-  background-color: #ffffff;
+
   padding-bottom: 50px;
   margin-bottom: 25px;
   width: 100%;
+  height:100%;
+
   margin-top: 50px; // accommodate the navbar
   }
 section {
   @extend .row;
   margin-top: 10px;
+
   }
+body {
+  height: 100%;
+  background: url('http://www.cs.helsinki.fi/u/laxlax/Laituri.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+}
