--- a/app/views/layouts/_navigation_links.html.erb
+++ b/app/views/layouts/_navigation_links.html.erb
@@ -1,11 +1,11 @@
 <%# add navigation links to this file %>
-<li class="<%= 'active' if params[:controller] == 'cabins' %>"><%= link_to 'Home', cabins_path %></li>
-<li class="<%= 'active' if params[:controller] == 'needs_steps.rb' %>"><%= link_to 'Needs', needs_path %></li>
-<li class="<%= 'active' if params[:controller] == 'supplies' %>"><%= link_to 'Supplies', supplies_path %></li>
-<li class="<%= 'active' if params[:controller] == 'visits' %>"><%= link_to 'Visits', visits_path %></li>
+<li class="<%= 'active' if params[:controller] == 'cabins' %>"><%= link_to 'Etusivu', cabins_path %></li>
+<li class="<%= 'active' if params[:controller] == 'needs' %>"><%= link_to 'Puutteet', needs_path %></li>
+<li class="<%= 'active' if params[:controller] == 'supplies' %>"><%= link_to 'Tarvikkeet', supplies_path %></li>
+<li class="<%= 'active' if params[:controller] == 'visits' %>"><%= link_to 'Mökkireissut', visits_path %></li>
 <% unless current_user.nil? %>
-    <li><%= link_to 'Logout', logout_path, method: :delete %></li>
+    <li><%= link_to 'Kirjaudu ulos', logout_path, method: :delete %></li>
 <% else %>
-  <li><%= link_to 'Login', login_path %></li>
+  <li><%= link_to 'Kirjaudu', login_path %></li>
 <% end %>
 
