--- a/app/views/needs/_form.html.erb
+++ b/app/views/needs/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@need) do |f| %>
+<%= bootstrap_form_for(@need) do |f| %>
   <% if @need.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@need.errors.count, "error") %> prohibited this need from being saved:</h2>
@@ -11,15 +11,10 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= f.label :info %><br>
-    <%= f.text_field :info %>
-  </div>
-  <div class="field">
-    <%= f.label :cabin_id %><br>
-    <%= f.select :cabin_id, options_from_collection_for_select(@cabins, :id, :name, selected: @need.cabin_id) %>
-  </div>
-  <div class="actions">
-    <%= f.submit %>
-  </div>
+
+    <%= f.text_field :info, label: "Tiedot", placeholder: "Kirjoita tiedot" %>
+    <%= f.select :cabin_id, options_from_collection_for_select(@cabins, :id, :name, selected: @need.cabin_id),label: "Valitse mökki" %>
+    <%= f.form_group do %>
+        <%= f.submit "Luo puute" %>
+    <% end %>
 <% end %>
