--- a/app/views/needs/edit.html.erb
+++ b/app/views/needs/edit.html.erb
@@ -1,5 +1,5 @@
-<h1>Editing need</h1>
+<h2>Muokkaa puutetta</h2>
 
 <%= render 'form' %>
 
-<%= link_to 'Cancel', needs_path, class:'btn btn-primary' %>
+<%= link_to 'Peruuta', needs_path, class:'btn btn-danger' %>
