--- a/app/views/supplies/edit.html.erb
+++ b/app/views/supplies/edit.html.erb
@@ -1,5 +1,5 @@
-<h1>Editing supply</h1>
+<h2>Muokkaa tarviketta</h2>
 
 <%= render 'form' %>
 
-<%= link_to 'Cancel', supplies_path, class:'btn btn-primary' %>
+<%= link_to 'Peruuta', supplies_path, class:'btn btn-danger' %>
