--- a/app/views/visits/edit.html.erb
+++ b/app/views/visits/edit.html.erb
@@ -1,5 +1,5 @@
-<h1>Editing visit</h1>
+<h2>Muokkaa vierailua</h2>
 
 <%= render 'form' %>
 
-<%= link_to 'Cancel', visits_path, class:'btn btn-primary' %>
+<%= link_to 'Peruuta', visits_path, class:'btn btn-danger' %>
