--- a/app/views/needs/_form.html.erb
+++ b/app/views/needs/_form.html.erb
@@ -15,6 +15,6 @@
     <%= f.text_field :info, label: "Tiedot", placeholder: "Kirjoita tiedot" %>
     <%= f.select :cabin_id, options_from_collection_for_select(@cabins, :id, :name, selected: @need.cabin_id),label: "Valitse mökki" %>
     <%= f.form_group do %>
-        <%= f.submit "Luo puute" %>
+        <%= f.submit "Tallenna" %>
     <% end %>
 <% end %>
