--- a/app/views/supplies/index.html.erb
+++ b/app/views/supplies/index.html.erb
@@ -1,13 +1,18 @@
-<h1>Listing supplies</h1>
-<p>You can order the list based on cabin, user or the information.<br/>
-    Want to search? Ctrl + F</p>
+<h1>Tarvikkeet</h1>
+<p>Listan järjestystä voi muokata painalla sarakkeen nimeä.<br/>
+  Pääset muokkamaan tietoja klikkaamalla tarvikkeen tekstiä.<br>
+  Voit myös etsiä listalta jotain tiettyä tarviketta.</p>
+
+<% unless current_user.nil? %>
+    <%= link_to 'Lisää tarvike', new_supply_path, class:'btn btn-primary' %>
+<% end %>
 
 <table class="table table-condensed">
   <thead>
     <tr>
-      <th><%= link_to 'Cabin', supplies_path(order:"cabin") %></th>
-      <th><%= link_to 'User', supplies_path(order:"user") %></th>
-      <th><%= link_to 'Info', supplies_path(order:"info") %></th>
+      <th><%= link_to 'Mökki', supplies_path(order:"cabin") %></th>
+      <th><%= link_to 'Lisääjä', supplies_path(order:"user") %></th>
+      <th><%= link_to 'Tiedot', supplies_path(order:"info") %></th>
       <th></th>
       <th></th>
     </tr>
@@ -18,17 +23,9 @@
       <tr>
         <td><%= supply.cabin_name(supply.cabin_id) %></td>
         <td><%= supply.user_name(supply.user_id) %></td>
-        <td><%= supply.info %></td>
-        <td><%= link_to 'Edit', edit_supply_path(supply) %></td>
-        <td><%= link_to 'Destroy', supply, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to supply.info, edit_supply_path(supply)  %></td>
+        <td><%= link_to 'Poista', supply, method: :delete, data: { confirm: 'Oletko varma poistosta?' }, class:'btn btn-danger' %></td>
       </tr>
     <% end %>
   </tbody>
 </table>
-
-<br>
-
-
-<% unless current_user.nil? %>
-    <%= link_to 'New Supply', new_supply_path, class:'btn btn-primary' %>
-<% end %>
