--- a/app/views/visits/_form.html.erb
+++ b/app/views/visits/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@visit) do |f| %>
+<%= bootstrap_form_for(@visit) do |f| %>
   <% if @visit.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@visit.errors.count, "error") %> prohibited this visit from being saved:</h2>
@@ -11,19 +11,8 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= f.label :start_date %> (pp.kk.vvvv) <br>
-    <%= f.date_field :start_date %>
-  </div>
-   <div class="field">
-     <%= f.label :end_date %> (pp.kk.vvvv) <br>
-     <%= f.date_field :end_date %>
-   </div>
-   <div class="field">
-     <%= f.label :cabin_id %><br>
-     <%= f.select :cabin_id, options_from_collection_for_select(@cabins, :id, :name, selected: @visit.cabin_id) %>
-   </div>
-  <div class="actions">
-    <%= f.submit %>
-  </div>
+    <%= f.date_field :start_date, label: "Menopäivä" %>
+    <%= f.date_field :end_date, label: "Lähtöpäivä" %>
+    <%= f.select :cabin_id, options_from_collection_for_select(@cabins, :id, :name, selected: @visit.cabin_id),label: "Valitse mökki" %>
+    <%= f.submit "Tallenna" %>
 <% end %>
