--- a/app/views/visits/new.html.erb
+++ b/app/views/visits/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New visit</h1>
+<h2>Uusi vierailu</h2>
 
 <%= render 'form' %>
 
-<%= link_to 'Back', visits_path, class:'btn btn-primary' %>
+<%= link_to 'Peruuta', visits_path, class:'btn btn-danger' %>
